make test-TableHeader

--- a/dht/Makefile
+++ b/dht/Makefile
@@ -7,16 +7,17 @@ help:
 	# make dht
 	# make test
 
-test: test-TableEntry test-matchTableHeaderLine test-RoutingTables test-RoutingTablesLog
+test: test-TableEntry test-TableHeader test-RoutingTables test-RoutingTablesLog
+
+test-TableHeader:
+	python3 TableHeader.py
+
 test-RoutingTablesLog:
 	python3 RoutingTablesLog.py 1581498637.dht4
 	#python3 RoutingTablesLog.py 1581498637.dht6
 
 test-RoutingTables:
 	python3 RoutingTables.py
-
-test-matchTableEntryLine:
-	python3 matchTableEntryLine.py
 	
 test-TableEntry:
 	python3 TableEntry.py
