archie old saved files

--- a/dht/dht/Makefile
+++ b/dht/dht/Makefile
@@ -1,6 +1,13 @@
 .ONESHELL:
 
-tgz: 158156.tgz 158157.tgz
+tgz: 158156.tgz 158157.tgz 15813.tgz 15814.tgz
+
+15813.tgz: 
+	tar zcvf $@ $(basename $@)*.dht?
+
+15814.tgz: 
+	tar zcvf $@ $(basename $@)*.dht?
+
 
 158156.tgz: 
 	tar zcvf $@ $(basename $@)*.dht?
