add saved log files

--- a/dht/dht/Makefile
+++ b/dht/dht/Makefile
@@ -1,6 +1,14 @@
 .ONESHELL:
 
-tgz: 158156.tgz 158157.tgz 15813.tgz 15814.tgz
+tgz: \
+ 15813.tgz \
+ 15814.tgz \
+ 15815.tgz \
+ 158156.tgz \
+ 158157.tgz 
+
+15815.tgz: 
+	tar zcvf $@ $(basename $@)*.dht?
 
 15813.tgz: 
 	tar zcvf $@ $(basename $@)*.dht?
